@@ -154,6 +154,9 @@ RnBiseqSet<-function(
 		msg<-c("Inconsistent values for sites and meth")
 		rnb.error(msg)
 	}
+	if(usebigff){
+		bff.finalizer <- rnb.getOption("disk.dump.bigff.finalizer")
+	}
 	
 	if(!is.null(rnb.getOption("identifiers.column"))){
 		sample.names<-pheno[[rnb.getOption("identifiers.column")]]
@@ -293,7 +296,7 @@ RnBiseqSet<-function(
 		if(!useff){
 			covg[is.na(covg)]<-0L
 		}else{
-			if(verbose) logger.status(c("Setting zero coverages")) #TODO: debug info: remove me
+			# if(verbose) logger.status(c("Setting zero coverages")) #TODO: debug info: remove me
 			for(ci in 1:ncol(covg)){
 				covg[is.na(covg[,ci]),ci]<-0L
 			}
@@ -311,24 +314,27 @@ RnBiseqSet<-function(
 		meth.old <- meth
 		if(verbose) logger.status(c("Creating methylation matrix")) #TODO: debug info: remove me
 		if (usebigff) {
-			meth <- BigFfMat(row.n=nrow(sites), col.n=ncol(meth.old), row.names=NULL, col.names=sample.names, finalizer="delete")
+			meth <- BigFfMat(row.n=nrow(sites), col.n=ncol(meth.old), row.names=NULL, col.names=sample.names, finalizer=bff.finalizer)
 		} else {
 			meth <- ff(NA, dim=c(nrow(sites), ncol(meth.old)), dimnames=list(NULL, sample.names), vmode="double")
 		}
-		if(verbose) logger.status(c("Filling methylation matrix")) #TODO: debug info: remove me
-		meth[,] <- meth.old[which(legal.sites)[sites[,4L]],]
+		# if(verbose) logger.status(c("Filling methylation matrix")) #TODO: debug info: remove me
+		# meth[,] <- meth.old[which(legal.sites)[sites[,4L]],]
+		site.inds <- which(legal.sites)[sites[,4L]]
+		for (j in 1:ncol(meth.old)) meth[,j] <- meth.old[site.inds,j]
 		rm(meth.old)
 		rnb.cleanMem()
 		if(!is.null(covg)){
 			covg.old <- covg
 			if(verbose) logger.status(c("Creating coverage matrix")) #TODO: debug info: remove me
 			if (usebigff) {
-				covg <- BigFfMat(row.n=nrow(sites), col.n=ncol(covg.old), row.names=NULL, col.names=sample.names, na.prototype=as.integer(NA), finalizer="delete")
+				covg <- BigFfMat(row.n=nrow(sites), col.n=ncol(covg.old), row.names=NULL, col.names=sample.names, na.prototype=as.integer(NA), finalizer=bff.finalizer)
 			} else {
 				covg <- ff(NA_integer_, dim=c(nrow(sites), ncol(covg.old)), dimnames=list(NULL, sample.names))
 			}
-			if(verbose) logger.status(c("Filling coverage matrix")) #TODO: debug info: remove me
-			covg[,] <- covg.old[which(legal.sites)[sites[,4L]],]
+			# if(verbose) logger.status(c("Filling coverage matrix")) #TODO: debug info: remove me
+			# covg[,] <- covg.old[which(legal.sites)[sites[,4L]],]
+			for (j in 1:ncol(covg.old)) covg[,j] <- covg.old[site.inds,j]
 			rm(covg.old)
 			rnb.cleanMem()
 		}
@@ -390,7 +396,7 @@ RnBiseqSet<-function(
 		
 		if("matrix" %in% class(meth)){
 			if (usebigff){
-				meth <- BigFfMat(meth, finalizer="delete")
+				meth <- BigFfMat(meth, finalizer=bff.finalizer)
 			} else {
 				meth <- convert.to.ff.matrix.tmp(meth)
 			}
@@ -399,7 +405,7 @@ RnBiseqSet<-function(
 		if(!is.null(covg)){
 			if("matrix" %in% class(covg)){
 				if (usebigff){
-					covg <- BigFfMat(covg, finalizer="delete")
+					covg <- BigFfMat(covg, finalizer=bff.finalizer)
 				} else {
 					covg <- convert.to.ff.matrix.tmp(covg)
 				}
